Fix spacing

--- a/assets/mainstyle.css
+++ b/assets/mainstyle.css
@@ -55,10 +55,6 @@ img.content {
   height: auto;
 }
 
-ul.content {
-	list-style: default;
-}
-
 .header {
 	text-align: left;
 	justify-content: flex-start;
